fix overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,11 +8,11 @@
 }
 
 .flex-header {
-  width: auto;
+  width: 20vw;
 }
 
 .flex-section {
-  width: auto;
+  width: 50vw;
   margin-left: 20px;
 }
 
